Solved problem with login link not being readable

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -96,7 +96,7 @@ header.navbar{
     padding: 0.95rem 0;
     border-bottom: 1px solid #ddd;
 }
-
+.usermenu .login a{ color: #fff; }
 h3.coursename{ font-size: 1.2rem; }
 #page-header{
     .card{
